[gd_scene load_steps=10 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://assets/course_tiles1.tres" type="MeshLibrary" id=2]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI.tscn" type="PackedScene" id=4]
[ext_resource path="res://Arrow.tscn" type="PackedScene" id=5]
[ext_resource path="res://GimbalOut.gd" type="Script" id=6]

[sub_resource type="ProceduralSky" id=1]

radiance_size = 4
sky_top_color = Color( 0.0470588, 0.454902, 0.976471, 1 )
sky_horizon_color = Color( 0.556863, 0.823529, 0.909804, 1 )
sky_curve = 0.25
sky_energy = 1.0
ground_bottom_color = Color( 0.101961, 0.145098, 0.188235, 1 )
ground_horizon_color = Color( 0.482353, 0.788235, 0.952941, 1 )
ground_curve = 0.01
ground_energy = 1.0
sun_color = Color( 0.968384, 1, 0.421875, 1 )
sun_latitude = 35.0
sun_longitude = 0.0
sun_angle_min = 1.0
sun_angle_max = 100.0
sun_curve = 0.05
sun_energy = 16.0
texture_size = 2
_sections_unfolded = [ "Sun" ]

[sub_resource type="Environment" id=2]

background_mode = 2
background_sky = SubResource( 1 )
background_sky_custom_fov = 0.0
background_color = Color( 1, 1, 1, 1 )
background_energy = 0.75
background_canvas_max_layer = 0
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 0.5
ambient_light_sky_contribution = 0.0
fog_enabled = false
fog_color = Color( 0.5, 0.6, 0.7, 1 )
fog_sun_color = Color( 1, 0.9, 0.7, 1 )
fog_sun_amount = 0.0
fog_depth_enabled = true
fog_depth_begin = 10.0
fog_depth_curve = 1.0
fog_transmit_enabled = false
fog_transmit_curve = 1.0
fog_height_enabled = false
fog_height_min = 0.0
fog_height_max = 100.0
fog_height_curve = 1.0
tonemap_mode = 0
tonemap_exposure = 1.0
tonemap_white = 1.0
auto_exposure_enabled = false
auto_exposure_scale = 0.4
auto_exposure_min_luma = 0.05
auto_exposure_max_luma = 8.0
auto_exposure_speed = 0.5
ss_reflections_enabled = false
ss_reflections_max_steps = 64
ss_reflections_fade_in = 0.15
ss_reflections_fade_out = 2.0
ss_reflections_depth_tolerance = 0.2
ss_reflections_roughness = true
ssao_enabled = true
ssao_radius = 1.0
ssao_intensity = 1.0
ssao_radius2 = 0.0
ssao_intensity2 = 1.0
ssao_bias = 0.01
ssao_light_affect = 0.0
ssao_color = Color( 0, 0, 0, 1 )
ssao_quality = 0
ssao_blur = 3
ssao_edge_sharpness = 4.0
dof_blur_far_enabled = false
dof_blur_far_distance = 5.0
dof_blur_far_transition = 5.0
dof_blur_far_amount = 0.1
dof_blur_far_quality = 1
dof_blur_near_enabled = false
dof_blur_near_distance = 2.0
dof_blur_near_transition = 1.0
dof_blur_near_amount = 0.1
dof_blur_near_quality = 1
glow_enabled = true
glow_levels/1 = false
glow_levels/2 = false
glow_levels/3 = true
glow_levels/4 = false
glow_levels/5 = true
glow_levels/6 = false
glow_levels/7 = false
glow_intensity = 0.8
glow_strength = 1.0
glow_bloom = 0.0
glow_blend_mode = 2
glow_hdr_threshold = 1.0
glow_hdr_scale = 2.0
glow_bicubic_upscale = false
adjustment_enabled = false
adjustment_brightness = 1.0
adjustment_contrast = 1.0
adjustment_saturation = 1.0
_sections_unfolded = [ "Adjustments", "Ambient Light", "Background", "DOF Far Blur", "Glow", "SSAO" ]

[sub_resource type="SphereShape" id=3]

radius = 0.240948

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )

[node name="GridMap" type="GridMap" parent="." index="0"]

theme = ExtResource( 2 )
cell_size = Vector3( 2, 2, 2 )
cell_octant_size = 8
cell_center_x = true
cell_center_y = true
cell_center_z = true
cell_scale = 1.0
collision_layer = 1
collision_mask = 1
data = {
"cells": PoolIntArray( 0, 65530, 3, 1, 65530, 1441804, 2, 65530, 1441803, 65534, 65530, 1048581, 65535, 65530, 1441804, 0, 65531, 655372, 0, 65532, 655372, 0, 65533, 655372, 0, 65534, 655372, 0, 65535, 655366 )
}
__meta__ = {
"_editor_clip_": 0
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="." index="1"]

environment = SubResource( 2 )

[node name="Tee" type="Position3D" parent="." index="2"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.908975, 1.29121, -1.05079 )

[node name="Hole" type="Area" parent="." index="3"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.49279, 0.76749, -10.9996 )
input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0

[node name="CollisionShape" type="CollisionShape" parent="Hole" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.104197, -0.0752354, 0 )
shape = SubResource( 3 )
disabled = false

[node name="Ball" parent="." index="4" instance=ExtResource( 3 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.877965, 1.35741, -0.948123 )
bounce = 0.3
gravity_scale = 2.0
continuous_cd = true
linear_damp = 0.5
angular_damp = 0.1
_sections_unfolded = [ "Angular", "Linear" ]

[node name="UI" parent="." index="5" instance=ExtResource( 4 )]

[node name="Arrow" parent="." index="6" instance=ExtResource( 5 )]

visible = false

[node name="GimbalOut" type="Spatial" parent="." index="7"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.787906, 1.29772, -6.19456 )
script = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="GimbalIn" type="Spatial" parent="GimbalOut" index="0"]

[node name="Camera" type="Camera" parent="GimbalOut/GimbalIn" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = true
fov = 70.0
size = 1.0
near = 0.05
far = 100.0
_sections_unfolded = [ "Transform" ]

[node name="DirectionalLight" type="DirectionalLight" parent="." index="8"]

transform = Transform( 0.00345654, 0.631268, -0.775557, 0, 0.775562, 0.631272, 0.999994, -0.00218202, 0.00268076, -4.95159, 5.93207, -6.0344 )
layers = 1
light_color = Color( 1, 1, 1, 1 )
light_energy = 0.5
light_indirect_energy = 1.0
light_negative = false
light_specular = 0.5
light_bake_mode = 1
light_cull_mask = -1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 1 )
shadow_bias = 0.0
shadow_contact = 0.0
shadow_reverse_cull_face = false
editor_only = false
directional_shadow_mode = 2
directional_shadow_split_1 = 0.1
directional_shadow_split_2 = 0.2
directional_shadow_split_3 = 0.5
directional_shadow_blend_splits = false
directional_shadow_normal_bias = 0.8
directional_shadow_bias_split_scale = 0.25
directional_shadow_depth_range = 0
directional_shadow_max_distance = 150.0
_sections_unfolded = [ "Directional Shadow", "Editor", "Light", "Shadow" ]

[connection signal="body_entered" from="Hole" to="." method="_on_Hole_body_entered"]

[connection signal="stopped" from="Ball" to="." method="_on_Ball_stopped"]


